--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,8 @@
     <body>
         <h1>Welcome to my website.</h1>
         <h2> Hello! <h2>
-        Hello, World!
+        <!-- Add paragraph elements to identify blocks of paragraph text -->
+            <p>Hello, World!</p>
+            <p>I can't wait to receive my Hacktoberfest 2021 swag!</p>
     </body>
 </html>
